syntax = "proto3";

import "google/protobuf/timestamp.proto";

package acts_service;

service ActsService {
    rpc getActForTemplater (actId) returns (Act);
    rpc GetFilePath (actId) returns (Path);
}

message actId {
    string id = 1;
}

message Path {
    string path = 1;
}

message Act {
    string id = 1;
    string name = 2;
    Consumer customer = 3;
    Consumer generalCustomer = 4;
    Consumer lab = 5;
    Option typeOfSample = 6;
    Option objectName = 7;
    Option place = 8;
    DateTime datetime = 9;
    Option method = 10;
    Option toolType = 11;
    Option climaticEnvironmental = 12;
    Option planning = 13;
    repeated Option normativeDocuments = 14;
    Option sampleType = 15;
    string sample = 16;
    repeated Option preparation = 17;
    Option goal = 18;
    repeated Option definedIndicators = 19;
    string additions = 20;
    string informationAboutSelection = 21;
    Option environmentalEngineer = 22;
    Option representative = 23;
    Option passedSample = 24;
    repeated Application applications = 25;
}

message DateTime {
    google.protobuf.Timestamp date = 1;
    string time = 2;
}

message Application {
    string place = 1;
    DateTime datetime = 2;
}

message Consumer {
    string id = 1;
    string fullname = 2;
    string label = 3;
    Address address = 4;
    string tel = 5;
    string email = 6;
}

message Address {
    string zip = 1;
    string country = 2;
    string region = 3;
    string city = 4;
    string street = 5;
    string building = 6;
    string room = 7;
}

message Option {
    string id = 1;
    string label = 2;
}